make personlized design :lipstick:

--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
 		<!-- End Portfolio Section -->
 
 		<!-- Start Testmonials Section -->
+		<!--
 		<div class="testmonials center" id="testmonials">
 			<div class="container">
 				<div class="test-owl">
@@ -602,6 +603,7 @@
 				</div>
 			</div>
 		</div>
+		-->
 		<!-- End Testmonials Section -->
 
 		<!-- Start Contact Section -->
@@ -643,41 +645,42 @@
 						<i class="ion-ios-telephone center"></i>
 						<div class="info-content">
 							<h3>call me</h3>
-							<span>( +1 ) 123 455 564 0</span>
-							<span>( +1 ) 123 750 317 0</span>
+							<span>( +91 ) 8464 879 957 </span>
+							<span>( +91 ) 9999 783 754 </span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
 						<i class="ion-email center"></i>
 						<div class="info-content">
 							<h3>Send a message</h3>
-							<span>info@marqa.com</span>
-							<span>admin@marqa.com</span>
+							<span>abhishek.s14@iiits.in</span>
+							<span>tremblerz@gmail.com</span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<i class="ion-android-home center"></i>
 						<div class="info-content">
 							<h3>Visit me</h3>
-							<span>Street 227, Ismailia,</span><span>Egypt</span>
+							<span>IIIT Sri City, Andhra Pradesh</span><span>India</span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
-						<i class="ion-ios-clock center"></i>
+						<!--<i class="ion-ios-clock center"></i>-->
+						<i class="icon ion-ios-body center"></i>
 						<div class="info-content">
-							<h3>Work time</h3>
-							<span>Sat - Wed : 07.00 - 16.00 </span>
-							<span>Thursday : 08.00 - 14.00 </span>
+							<h3>Languages</h3>
+							<span>Hindi : Mother tongue </span>
+							<span>English : Proficient </span>
 						</div>
 					</div>
-				</div>				
+				</div>
 			</div>
-			<div id="map" class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="250"></div>
+			<!--<div id="map" class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="250"></div>-->
 		</div>
 		<!-- End Contact Section -->
 
 		<!-- Start Partners Section -->
-		<div class="partners">
+		<div class="Photo gallery">
 			<div class="container">
 				<div class="partners-owl-carousel">
 					<div class="partner"><img src="https://d33wubrfki0l68.cloudfront.net/cd5b6dc55334e6056b8d807baa56bad9f8fdd436/ceb23/img/brands/3docean-logo.png" alt="partner"></div>
@@ -699,12 +702,11 @@
 					<div class="follow-me wow fadeIn" data-wow-duration="1s" data-wow-offset="200">follow me</div>
 					<div class="col-md-12 col-xs-12 links wow fadeInUp"  data-wow-duration="1s" data-wow-offset="100">
 						<div class="icon-wrapper center">
-							<a href="#" class="icon fb ion-social-facebook"></a>
-							<a href="#" class="icon tw ion-social-twitter"></a>
-							<a href="#" class="icon gh ion-social-github"></a>
-							<a href="#" class="icon gp ion-social-googleplus"></a>
-							<a href="#" class="icon li ion-social-linkedin"></a>
-							<a href="#" class="icon power ion-social-power"></a>
+							<a href="https://www.facebook.com/tremblerz" class="icon fb ion-social-facebook"></a>
+							<a href="https://twitter.com/tremblerz" class="icon tw ion-social-twitter"></a>
+							<a href="https://github.com/tremblerz" class="icon gh ion-social-github"></a>
+							<a href="https://plus.google.com/102073238949315975691" class="icon gp ion-social-googleplus"></a>
+							<a href="https://www.linkedin.com/in/tremblerz" class="icon li ion-social-linkedin"></a>
 						</div>
 					</div>
 					<div class="col-md12 col-xs-12 copyright wow fadeInUp"  data-wow-duration="1s" data-wow-offset="0">
