:lipstic: improve and personalize design

--- a/index.html
+++ b/index.html
@@ -231,37 +231,37 @@
 			<div class="container">
 				<div class="title wow fadeIn" data-wow-duration="1s" data-wow-offset="100">
 					<h2 class="h2">technical skills</h2>
-					<p class="title">Monotonectally cultivate prospective results through real-time metrics.</p>
+					<p class="title">Skills needed to flourish in Tech industries</p>
 				</div>	
 				<div class="row">
 					<div class="skill col-md-3 col-sm-6">
 						<div class="chart center" data-percent="88">
 							<span><p id="chart_num_1">0</p> %</span>
 						</div>
-						<h2>html5</h2>
+						<h2>Penetration Testing</h2>
 					</div>
 					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="95">
+						<div class="chart center" data-percent="80">
 							<span><p id="chart_num_2">0</p> %</span>
 						</div>
-						<h2>css3</h2>
+						<h2>Algorithms</h2>
 					</div>
 					<div class="skill col-md-3 col-sm-6">
 						<div class="chart center" data-percent="73">
 							<span><p id="chart_num_3">0</p> %</span>
 						</div>
-						<h2>javascript</h2>
+						<h2>Full stack development</h2>
 					</div>
 					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="55">
+						<div class="chart center" data-percent="85">
 							<span><p id="chart_num_4">0</p> %</span>
 						</div>
-						<h2>php</h2>
+						<h2>Server and Network management</h2>
 					</div>
 				</div>
 				<div class="wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-					<h2 class="h2">other skills</h2>
-					<p class="title">Monotonectally cultivate prospective results through real-time metrics.</p>
+					<h2 class="h2">Other skills</h2>
+					<p class="title">Skills which we come across in our daily lives</p>
 
 					<div class="row">
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
@@ -271,22 +271,22 @@
 						  <div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="organization" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-						  <div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="visual design" data-show-values="true" data-unit="%"></div>
+						  <div class=" bar_group__bar thick elastic" data-value="95" data-tooltip="true" data-label="problem solving" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-						  <div class=" bar_group__bar thick elastic" data-value="65" data-tooltip="true" data-label="programming" data-show-values="true" data-unit="%"></div>
+						  <div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="programming" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-						  <div class=" bar_group__bar thick elastic" data-value="70" data-tooltip="true" data-label="planning" data-show-values="true" data-unit="%"></div>
+						  <div class=" bar_group__bar thick elastic" data-value="90" data-tooltip="true" data-label="planning" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
 						  <div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="learning" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-						  <div class=" bar_group__bar thick elastic" data-value="55" data-tooltip="true" data-label="marketing" data-show-values="true" data-unit="%"></div>
+						  <div class=" bar_group__bar thick elastic" data-value="95" data-tooltip="true" data-label="offering tech solutions" data-show-values="true" data-unit="%"></div>
 						</div>
 						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-						  <div class=" bar_group__bar thick elastic" data-value="90" data-tooltip="true" data-label="ux-design" data-show-values="true" data-unit="%"></div>
+						  <div class=" bar_group__bar thick elastic" data-value="90" data-tooltip="true" data-label="Team management" data-show-values="true" data-unit="%"></div>
 						</div>
 					</div>	
 				</div>	
