:lipstick: Add profile pic

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="my-pic center col-sm-4 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200">
-						<img src="" alt="my profile">
+						<img src="https://avatars2.githubusercontent.com/u/10557215?v=3&s=400" alt="my profile">
 					</div>
 					<div class="introduction col-sm-8 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200" data-wow-delay="0.5s">
 						<h2 class="h2">Abhishek Singh</h2>
