--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<div class="fact">
 							<i class="ion-coffee"></i>
 							<p id="number_3">0</p>
-							<span>cups of coffee</span>
+							<span>languages/libraries/tools learnt</span>
 						</div>
 					</div>
 
@@ -171,7 +171,7 @@
 						<div class="fact">
 							<i class="ion-happy"></i>
 							<p id="number_4">0</p>
-							<span>satisfied customers</span>
+							<span>Algorithmic problem solved</span>
 						</div>
 					</div>
 				</div>
