:sparkle: Add email feature

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-						<form method='post' id='form'><input type='hidden' name='form-name' value='form' />
+						<form method='POST' action="http://formspree.io/abhishek.s14@iiits.in" id='form'><input type='hidden' name='form-name' value='form' />
 							<div class="form-group">
 								<input type="text" name="name" id="name" class="form-control" data-validation-required-message="Please, Enter Your Name." required>
 								<label for="name">Your Name</label>
