remove additional text

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<div class="container">
 				<div class="title wow fadeIn" data-wow-duration="1s" data-wow-offset="300">
 					<h2 class="h2">Here's what i'm doing</h2>
-					<p class="main-para">Monotonectally cultivate prospective results through real-time metrics.</p>
+					<p class="main-para"></p>
 				</div>	
 				<div class="row">
 
