Minor data changes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="accordion">
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> Who am i?</div>
-								<div class="acc-content">I am a guy pursuing B.Tech in IIIT Sri City.</div>
+								<div class="acc-content">I am a junior undergraduate studying in IIIT Sri City.</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What I'm really good at?</div>
@@ -124,11 +124,11 @@
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> How can you contact me?</div>
-								<div class="acc-content">Most of the time I am active on my primary email id so You can shoot me email at any point of time. If it's urgent or you are not getting response from me on email then we can hook up on call</div>
+								<div class="acc-content">Most of the time I am active on my primary email id so you can shoot me email at any point of time. If it's urgent or you are not getting response from me on email then we can hook up on call</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What are my hobbies</div>
-								<div class="acc-content">Music: Rock music, Guitar, Synthesizer, harmonium, Classical Vocals and many more.</div>
+								<div class="acc-content">I really like doing stuff related to Music. Currently I can play Guitar, Synthesizer, harmonium and decent at singing with a little bit of classical music also. Going on excursions, tours and different trips is another hobby of mine.</div>
 							</div>
 						</div>
 					</div>
@@ -188,10 +188,10 @@
 				</div>	
 				<div class="row">
 
-					<div class="col-md-3 col-sm-6 wow fadeInLeft" data-wow-duration="1s" data-wow-offset="300">
+					<div class="col-md-3 col-sm-6 wow fadeInRight" data-wow-duration="1s" data-wow-offset="300">
 						<div class="service">
-							<i class="ion-social-css3-outline"></i>
-							<h3>Cryptography</h3>
+							<i class="ion-monitor"></i>
+							<h3>Research in Secure Software</h3>
 							<p></p>
 						</div>
 					</div>
@@ -204,15 +204,15 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="300">
+					<div class="col-md-3 col-sm-6 wow fadeInLeft" data-wow-duration="1s" data-wow-offset="300">
 						<div class="service">
-							<i class="ion-monitor"></i>
-							<h3>Software Security</h3>
+							<i class="ion-social-css3-outline"></i>
+							<h3>Cryptography</h3>
 							<p></p>
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 wow fadeInRight" data-wow-duration="1s" data-wow-offset="300">
+					<div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="300">
 						<div class="service">
 							<i class="ion-help-buoy"></i>
 							<h3>Software development</h3>
