--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="introduction col-sm-8 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200" data-wow-delay="0.5s">
 						<h2 class="h2">Abhishek Singh</h2>
 						<p class="introduce">programmer / developer</p>
-						<p class="intro">Enthusiast in field of networking and security. Likes exploring new cultures and societies. Hobbies are meditation, trekking, video gaming and </p>
+						<p class="intro">Enthusiast in field of networking and security. Likes exploring new cultures and societies. Hobbies are self-exploration, trekking, video gaming and Sherlock Holmes</p>
 					</div>
 				</div>
 				<div class="row">
