--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div class="container">
 						<p class="wow fadeInDown" data-wow-duration="0.5s">Hello, It's me</p>
 						<h1 class="wow fadeInDown" data-wow-duration="0.5s" data-wow-delay=".5s">Abhishek Singh</h1>
-						<p class="wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="1s">Network Security Enthusiast</p>
+						<p class="wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="1s">If you're watching this then please don't go further ahead. Content of this website is no longer maintained and needs to be revamped.</p>
 						<a href="#about-me" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">about me</a>
 						<a href="#portfolio" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">my works</a>
 					</div>
