--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> How can you contact me?</div>
-								<div class="acc-content">Shoot me an email or contact me on <a href="twitter.com/tremblerz"><font color="black">Twitter</font></a>, <a href="facebook.com/tremblerz"><font color="black">Facebook</font></a> and <a href="https://www.linkedin.com/in/tremblerz/"><font color="black">Linkedin</font></a></div>
+								<div class="acc-content">Shoot me an email or contact me on <a href="https://www.twitter.com/tremblerz"><font color="black">Twitter</font></a>, <a href="https://www.facebook.com/tremblerz"><font color="black">Facebook</font></a> and <a href="https://www.linkedin.com/in/tremblerz/"><font color="black">Linkedin</font></a></div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What are my hobbies</div>
