--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 					    		</a>
 					    		
 					    		<div id="test-popup-8" class="white-popup mfp-hide">
-					    			<h3>Obstacle avoiding Robot using ultrasonic sensors</h3>
+					    			<h3>Lightweight Malware detection</h3>
 					    			<img src="img/lightweightmalware.png" class="center-block img-responsive" alt="project">
 										<p> Running high precision models and ensembles on cloud is compute extensive and the traditional solution to the problem involves trad-ing off with accuracy. In majority of the mission critical systemsinvolving security, such a solution is undesirable and risky. To mit-igate this trade-off we introduce an unique architecture which isoriented towards capturing high recall while requiring minimalcompute.By breaking down the problem of widely used one-shot malwaredetection to a two phase detection along with distributing models tothe compute nodes of appropriate capacity we bring down overalllatency substantially.</p>
 					    		</div>	
@@ -486,10 +486,6 @@
 		<!-- Start Contact Section -->
 		<div class="contact center" id="contact-me">
 			<div class="container">
-				<div class="title wow fadeInDown" data-wow-duration="1s" data-wow-offset="200">
-					<h2 class="h2">Get in touch</h2>
-					<p class="main-para">with me</p>
-				</div>
 				<div class="row contact-info">
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<i class="ion-ios-telephone center"></i>
