--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						</blockquote>
 						</p>
 						<a href="#about-me" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">about me</a>
-						<a href="#portfolio" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">my works</a>
+						<a href="#portfolio" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">my work</a>
 					</div>
 				</div>
 				<div class="mouse" id="mouse"></div>
@@ -99,7 +99,7 @@
 					<div class="introduction col-sm-8 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200" data-wow-delay="0.5s">
 						<h2 class="h2">Abhishek Singh</h2>
 						<p class="introduce">Undergraduate researcher</p>
-						<p class="intro">I am a big admirer of all scientific disciplines. Among all domains of science, I have predilection towards Computer Science and Mathematics. In computer science, I started with doing some interesting projects and internships in Systems and Security and eventually switched to Artificial Intelligence almost two years ago. Lately, I have been actively doing research in Meta-learning and AutoML. Apart from Computer Science, I also try to study Quantum physics and String theory in my free time. I am also strong advocate of environmental and social movements. My days are mostly packed with tasks and deadlines but I try to take out some time for meditation and physical exercise. Occasionaly, I take out some time for enjoying thrill packed movies, learning musical instruments and useless political debates.</p>
+						<p class="intro">I am a big admirer of all scientific disciplines. Among all domains of science, I have a predilection towards Computer Science and Mathematics. In computer science, I started with doing some interesting projects and internships in Systems and Security and eventually switched to Artificial Intelligence almost two years ago. Lately, I have been actively doing research in Meta-learning and AutoML. Apart from Computer Science, I also try to study Quantum physics and String theory in my free time. I am also a strong advocate of environmental and social movements. My days are mostly packed with tasks and deadlines but I try to take out some time for meditation and physical exercise. Occasionally, I also take out some time for enjoying thrill-packed movies, learning musical instruments and useless political debates.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -115,11 +115,11 @@
 						<div class="accordion">
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> Who am i?</div>
-								<div class="acc-content">I am a soul with physical emodiment who is unravelling deep mystical secrets of universe warped in time and hidden in oblivion. Jokes apart, I am a 4th year undergraduate studying at IIIT Sri City. I am also working with Cisco, CPSG-AI team as a research intern.</div>
+								<div class="acc-content">I am a soul in a physical emodiment who is unravelling deep mystical secrets of universe warped in time and hidden in oblivion. Jokes apart, I am a 4th year undergraduate studying at IIIT Sri City. I also work with Cisco, CPSG-AI team as a research intern.</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What I'm really good at?</div>
-								<div class="acc-content">I think only others can give a fair answer to this question. From my perception of myself, I think I am good at showing Grit and Persistence in the face of adversity, staying Unruffled, Learning new or unknown concepts.</div>
+								<div class="acc-content">I think only others can give a fair answer to this question. From my perception of myself, I think I am good at showing grit and persistence, staying unruffled, learning new or unknown concepts.</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> How can you contact me?</div>
