project pop-up design

--- a/index.html
+++ b/index.html
@@ -362,8 +362,9 @@
 					    		
 					    		<div id="test-popup-1" class="white-popup mfp-hide">
 					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Testing position</h5> 
 					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
-										<p>Accepted at<a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</a> Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+										<p>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</a> Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
 					    		</div>
 					    	</div>
 					    </div>	
@@ -521,7 +522,6 @@
 					</div>
 				</div>
 			</div>
-			<!--<div id="map" class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="250"></div>-->
 		</div>
 		<!-- End Contact Section -->
 
@@ -569,8 +569,6 @@
 		<!-- Bootstrap js file -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/645cf2b92ed5eff7b48ce798d5448736aa5f470f/assets/javascripts/bootstrap.min.js'></script>
 
-		<!-- easy pie chart from: https://github.com/rendro/easy-pie-chart -->
-		<script src='https://d33wubrfki0l68.cloudfront.net/js/b3e797517484e4101287f2df09f340752b344ae5/js/jquery.easypiechart.min.js'></script>
 
 		<!-- NiceScroll plugin from : https://areaaperta.com/nicescroll/ -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/c8dcc707877337dd345648dea5f60530d9cd5320/js/jquery.nicescroll.min.js'></script>
@@ -594,8 +592,6 @@
 		<!-- Owl carousel js file 
 		    from : https://www.owlcarousel.owlgraphic.com/index.html -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/bff1fd830c8b43345ef2a1c1b6512b85ea8251fe/js/owl.carousel.min.js'></script>
-		<!-- Google Map -->
-		<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 		<!-- Custom file  -->
 		<script type="text/javascript" src="js/plugins.js"></script>
 		<!--<script src='https://d33wubrfki0l68.cloudfront.net/js/69cdb2ffd99a1af1fc1ce562ccda9be78045d36b/js/plugins.js'></script>-->
