add title on top

--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
 					    		
 					    		<div id="test-popup-1" class="white-popup mfp-hide">
 					    			<h3>Fast Neural Architecture Construction</h3>
-										<h5>Testing position</h5> 
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</a>, Full paper <a href="https://arxiv.org/abs/1803.06744">link</a></h5>
 					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
-										<p>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</a> Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
 					    		</div>
 					    	</div>
 					    </div>	
