--- a/index.html
+++ b/index.html
@@ -298,18 +298,6 @@
 				</div>	
 				<div class="timeline wow fadeIn" data-wow-duration="1s" data-wow-offset="200">
 
-					<div class="timeline-block clearfix wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-university"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>Kulachi Hansraj Model Schol</h3>
-							<span class="duration">( March. 2001 : May 2014 )</span>
-							<span class="job-title"> Intermediate</span>
-							<p>I stayed in the same school throughout this period.</p>
-						</div>
-					</div>
-
 					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<div class="icon">
 							<i class="ion-university"></i>
@@ -318,7 +306,7 @@
 							<h3>IIIT Sri City</h3>
 							<span class="duration">( Aug. 2014 : Present )</span>
 							<span class="job-title"> Undergraduate</span>
-							<p>Most of the life skills I learned after coming into the college. Life is like a roller coaster here. Nevertheless, It has been a very satisfactory and rewarding journey for me so far.</p>
+							<p>I am pursuing B.Tech course in Computer Science and Engineering. Majority of the courses here are oriented towards Computer science, Electronics and Mathematics. As per the degree requirement, I also get to study various interesting and exciting courses like Communication skills, Economics, Humanities and much more. Life is on a roller coaster here. Nevertheless, It has been a very satisfactory and rewarding journey for me so far.</p>
 						</div>
 					</div>
 
