--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What I'm really good at?</div>
-								<div class="acc-content">I think only others can give a fair answer to this question. From my perception of myself, I think I am good at showing grit and persistence, staying unruffled, learning new or unknown concepts.</div>
+								<div class="acc-content">I think only others can give a fair answer to this question. From my perception of myself, I think I am good at showing grit and persistence, staying unruffled, and learning new or unknown concepts.</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> How can you contact me?</div>
