--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 						</div>
 						<div class="content left round-corners">
 							<h3>Cisco</h3>
-							<span class="duration">( Aug 2018 : Present )</span>
+							<span class="duration">( Aug 2018 : July 2019 )</span>
 							<span class="job-title"> Research Internship</span>
 							<p> This is a remote internship for the continuation of research efforts in CPSG-AI group of Cisco.
 							<ul>
@@ -423,6 +423,32 @@
 						</div>
 					</div>
 
+					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
+						<div class="icon">
+							<i class="ion-star"></i>
+						</div>
+						<div class="content left round-corners">
+							<h3>MIT Media Labs</h3>
+							<span class="duration">( September 2019 : Present )</span>
+							<span class="job-title"> Graduate Student</span>
+							<p> Joined as a graduate student in the Camera Culture group.
+							<ul>
+								<font color='#fff'>
+								<li>
+									Working on Privacy preserving machine learning method called Split learning.
+								</li>
+								<li>
+									Working on AI for healthcare.
+								</li>
+								<li>
+									Data driven methods for Imaging.
+								</li>
+								</font>
+							</ul>
+							</p>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -436,23 +462,21 @@
 						<i class="ion-ios-telephone center"></i>
 						<div class="info-content">
 							<h3>call me</h3>
-							<span>( +91 ) 9205665094 </span>
+							<span>(+1)-------- </span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
 						<i class="ion-email center"></i>
 						<div class="info-content">
 							<h3>Send a message</h3>
-							<span>abhishek.s14@iiits.in</span>
 							<span>tremblerz@gmail.com</span>
-							<span>abhishs8@cisco.com</span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<i class="ion-android-home center"></i>
 						<div class="info-content">
 							<h3>Visit me</h3>
-							<span>IIIT Sri City, Andhra Pradesh</span><span>India</span>
+							<span>Camera Culture, MIT Media Labs</span><span>US</span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
